// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package user;
option go_package="./pb";
// 生成 golang 代码后的包名
message UserReq {
    string id = 1 ;
}
message UserInfo {
  string openId = 1;
  string nickname=2;
  int32 gender=3;
  int32 tel=4;
  string avatarUrl=5;
  int32 isSingle=6;
  int32 isDel=7;
}
message UserResp {
  string message=1;
}
message ExistUser {
  bool  isExist=1;
}

service UserService {
  rpc GetUserInfo(UserReq) returns (UserInfo);
  rpc CreateUser(UserReq)returns (UserResp);
  rpc UpdateUser(UserInfo) returns(UserResp);
  rpc DeleteUser(UserReq)returns(UserResp);
  rpc FindUser(UserReq)returns(ExistUser);
}